force-app/main/default/objects/Renewal_Conversion_Status__c/Renewal_Conversion_Status__c.object-meta.xml
<CustomObject>
    <label>Renewal Conversion Status</label>
    <nameField>
        <label>Renewal Conversion Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Conversion Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>