force-app/main/default/objects/Renewal_Conversion_Status__c/fields/Fail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fail_Reason__c</fullName>
    <label>Fail Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>