force-app/main/default/objects/Renewal_Conversion_Status__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Renewal Conversion Status</relationshipLabel>
    <relationshipName>Renewal_Conversion_Status</relationshipName>
    <type>Lookup</type>
</CustomField>